# mtg-collection-manager

./: .eslintrc.json  .gitignore  .prettierignore  index.html  package-lock.json  package.json  splash-screen.html
src/: App.css  App.tsx  main.css  main.scss  main.tsx  splash-screen.tsx  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: action_handler.rs  actions.rs  application_context.rs  bonsai_repository.rs  card_collection_service.rs  collection_service.rs  commands.rs  main.rs  model.rs  repository.rs  surreal_respository.rs
src-tauri/src/actions/: card_collection_actions.rs  collection_actions.rs
src-tauri/src/model/: card_collection.rs  collection.rs
src/bindings/: CollectionDto.ts  CreateCollectionDto.ts  DeleteCollectionDto.ts  EditCardCollectionDto.ts
src/common/enum/: Action.ts  CollectionAction.ts  Domain.ts
src/components/common/: RouterButton.tsx
src/data/: symbology.json
src/hooks/useCollection/: useCollection.tsx
src/hooks/useIpc/: index.tsx  useIpc.tsx
src/hooks/useTauriCommand/: index.tsx  useTauriCommand.tsx
src/providers/CollectionProvider/: CollectionProvider.tsx  index.tsx
src/providers/ScryfallProvider/: ScryfallProvider.tsx  index.tsx
src/schema/: camelize.ts  index.ts
src/schema/scryfall/: Card.ts  CardFace.ts  CardSymbol.ts  List.ts  ManaCost.ts  RelatedCard.ts  Ruling.ts  ScryfallError.ts  Set.ts
src/types/: CardQuery.ts  Collection.ts
src/types/request/: CardCollectionRequest.ts  CardQueryRequest.ts  index.ts
src/view/: CardView.tsx  routes.tsx
src/view/CardView/: CardView.tsx  (+1 more)
(+34 files in other folders)
